update styling to prevent horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,17 @@
 html, body {
   background-color: rgba(251,243,234,0.4);
-  padding: 0px;
-  margin: 0px;
-  max-width: 100%;
-  overflow-x: hidden;
+  min-width: 100%;
 }
 
 #navigationbar {
   text-align: right;
   font-size: 19px;
-  font-family: "Rubik", sans-serif;
+  font-family: "Avenir", sans-serif;
   padding: 2px;
   padding-right: 5px;
   background-color: rgba(0,0,0,0.6);
   position: fixed;
-  width: 100%;
+  min-width: 100%;
   height: 40px;
   z-index : 1;
 }
@@ -62,7 +59,6 @@ html, body {
   background-image: url("../assets/christmas-background.jpg");
   background-size: 100%;
   background-position: center;
-  max-width: 100%;
 }
 .contentContainer {
   margin-right: 90px;
